force-app/main/default/objects/CEU_Participant__c/CEU_Participant__c.object-meta.xml
<CustomObject>
    <description>Trainer (Contact) participating in a CEU</description>
    <label>CEU Participant</label>
    <nameField>
        <label>CEU Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEU Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>