force-app/main/default/objects/CEU_Participant__c/fields/CEU__c.field-meta.xml
<CustomField>
    <fullName>CEU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CEU</label>
    <referenceTo>CEU__c</referenceTo>
    <relationshipLabel>CEUs</relationshipLabel>
    <relationshipName>CEUs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>