force-app/main/default/objects/CEU_Participant__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>